--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,14 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
     // Libraris
-    implementation 'com.google.firebase:firebase-core:11.8.0'
+    implementation 'com.firebaseui:firebase-ui-database:1.2.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 
-    implementation 'com.google.firebase:firebase-core:11.8.0'
-    implementation 'com.google.firebase:firebase-database:11.8.0'
+    implementation 'com.google.firebase:firebase-storage:12.0.0'
+    implementation 'com.google.firebase:firebase-auth:12.0.0'
+
+    implementation 'com.google.firebase:firebase-core:12.0.0'
+    implementation 'com.google.firebase:firebase-database:12.0.0'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
 
     implementation 'com.android.support:cardview-v7:26.1.0'
