HotFix & Order Manager
fix some bugs from Home.java & Common.java, and implement code
OrderStatus.java, Request.java, OrderViewHolder.java & Order.java, add
order_layout.xml, update_order_layout.xml and spinner libriry

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
     // Libraris
+    implementation 'com.jaredrummler:material-spinner:1.1.0'
     implementation 'com.firebaseui:firebase-ui-database:1.2.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
